# CPP-Nova-project

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  secondwindow.cpp  secondwindow.hpp  secondwindow.ui
cmake/: Findlibnova.cmake
